2004-10-08  Derek Price  <derek@ximbiot.com>

	* client.c (open_connection_to_server, close_connection_to_server,
	handle_redirect): Add traces.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* Makefile.am (cvs_SOURCES): Add parseinfo.h.

2004-10-07  Mark D. Baushke  <mdb@cvshome.org>

	* vers_ts.c (entries_time): Use size_t pointers. sizeof(int)
	may not be the same as sizeof(size_t) on OpenBSD sparc64.
	(Patch from Alexander Taler <dissent@cvshome.org>.)

	* wrapper.c (wrap_clean_fmt_str): Make static.

2004-10-07  Mark D. Baushke  <mdb@cvshome.org>

	* client.h (struct response): Make name a const.
	* cvs.h (RETSIGTYPE): Use a full prototype.
	* hash.h (struct node): Use a full prototype for delproc.

	* client.c (send_arg, send_option_string, option_with_arg): Make
	args of function const.
	* client.h (send_arg, send_option_string, option_with_arg): Ditto.
	
	* checkout.c (checkout): Make valid_options const.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* release.h: Silence gcc -Wall.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* cvs.h: Move include of getopt.h to system.h with similar headers.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* login.c: Include getpass.h.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* cvs.h: Include strcase.h.
	(cvs_casecmp): remove proto.
	* subr.c (cvs_casecmp): Remove function.
	* parseinfo.c: s/cvs_casecmp/strcasecmp/.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* cvs.h: Move getopt.h and regex.h into the GNULIB include section.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* main.c (cmds): Release calls unedit, to it modifies the repository.
	(struct cmd): Add const and full prototype where needed.
	* sanity.sh (edit-check): Use modify_repo where needed.
	(release): No more special case for release in proxy mode.
	(Patch from Mark D. Baushke  <mdb@cvshome.org>.)

	* release.c (release): Simplify login in if statement.

2004-10-06  Derek Price  <derek@ximbiot.com>
