@@ -37,6 +37,17 @@
 /* TODO: change this to something with a marginal degree of
    efficiency, like maybe a hash table.  Yeah. */
 
+
+
+static void
+delhardlist (Node *p)
+{
+    if (p->data)
+	dellist ((List **)&p->data);
+}
+
+
+
 List *hardlist;		/* Record hardlink information for working files */
 char *working_dir;	/* The top-level working directory, used for
 			   constructing full pathnames. */
@@ -48,7 +59,8 @@ char *working_dir;	/* The top-level working directory, used for
 Node *
 lookup_file_by_inode (const char *filepath)
 {
-    char *inodestr, *file;
+    char *inodestr;
+    const char *file;
     struct stat sb;
     Node *hp, *p;
 
@@ -57,7 +69,7 @@ lookup_file_by_inode (const char *filepath)
     if (file)
 	++file;
     else
-	file = (char *) filepath;
+	file = filepath;
 
     /* inodestr contains the hexadecimal representation of an
        inode, so it requires two bytes of text to represent
@@ -87,7 +99,7 @@ lookup_file_by_inode (const char *filepath)
 	hp->type = NT_UNKNOWN;
 	hp->key = inodestr;
 	hp->data = getlist();
-	hp->delproc = dellist;
+	hp->delproc = delhardlist;
 	(void) addnode (hardlist, hp);
     }
     else
